# SNF

./: .gitignore  .gitmodules  README.md
doc/: arch.drawio  links.txt  phases_fuzzing.drawio  valid_kinds.txt
src/: CMakeLists.txt  build
src/global/: CMakeLists.txt
src/global/inc/: global_cfg.h
src/main/: CMakeLists.txt  main.c
src/modules/: CMakeLists.txt
src/modules/fuzzer/: CMakeLists.txt  fuzzer.c  fuzzer.h
src/modules/generator/: CMakeLists.txt  generator.c  generator.h
src/modules/networking/: CMakeLists.txt  networking.c  networking.h
src/modules/packet/: CMakeLists.txt  packet.c  packet.h
src/modules/util/: CMakeLists.txt  util.c  util.h
src/tests/: CMakeLists.txt
src/tests/module_fuzzer/: CMakeLists.txt  module_fuzzer.c
src/tests/module_generator/: CMakeLists.txt  module_generator.c
src/tests/module_networking/: CMakeLists.txt  module_networking.c
src/tests/module_packet/: CMakeLists.txt  module_packet.c
src/tests/module_util/: CMakeLists.txt  module_util.c
